# fantasy_card

./: LICENSE  README.md  pyproject.toml
demo/: config.py  demo.py
demo/card_config/: laizihuanxiang.json
demo/utils/: image_utils.py  utils.py
