[tool.poetry]
name = "fantasy_card"
version = "0.1.0"
description = ""
authors = ["HibiKier <775757368@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pypinyin = "^0.46.0"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
